# orb_slam_mapmerge

./: .gitignore  README.md  orb_slam.mk
DBoW2/: CMakeLists.txt  package.xml
Debug/: core_cache.cpp.o.d  core_estimate_propagator.cpp.o.d  core_factory.cpp.o.d  core_hyper_dijkstra.cpp.o.d  core_hyper_graph.cpp.o.d  core_hyper_graph_action.cpp.o.d  core_jacobian_workspace.cpp.o.d  core_marginal_covariance_cholesky.cpp.o.d  core_matrix_structure.cpp.o.d  core_optimization_algorithm.cpp.o.d  core_optimization_algorithm_dogleg.cpp.o.d  core_optimization_algorithm_factory.cpp.o.d  core_optimization_algorithm_gauss_newton.cpp.o.d  core_optimization_algorithm_levenberg.cpp.o.d  core_optimization_algorithm_with_hessian.cpp.o.d  core_parameter.cpp.o.d  core_parameter_container.cpp.o.d  core_robust_kernel.cpp.o.d  core_robust_kernel_factory.cpp.o.d  core_robust_kernel_impl.cpp.o.d  core_solver.cpp.o.d  core_sparse_block_matrix_test.cpp.o.d  core_sparse_optimizer.cpp.o.d  core_sparse_optimizer_terminate_action.cpp.o.d  publishers_FramePublisher.cc.o.d  publishers_MapPublisher.cc.o.d  src_BowVector.cpp.o.d  src_FORB.cpp.o.d  src_FeatureVector.cpp.o.d  src_ScoringObject.cpp.o.d  src_main.cc.o.d  stuff_command_args.cpp.o.d  stuff_filesys_tools.cpp.o.d  stuff_opengl_primitives.cpp.o.d  stuff_os_specific.c.o.d  stuff_property.cpp.o.d  stuff_sampler.cpp.o.d  stuff_sparse_helper.cpp.o.d  stuff_string_tools.cpp.o.d  stuff_tictoc.cpp.o.d  (+18 more)
dbow2/: CMakeLists.txt  package.xml
dbow2/include/dbow2/: FORB.h  FeatureVector.h  ScoringObject.h  TemplatedVocabulary.h
dbow2/src/: BowVector.cpp  FORB.cpp  FeatureVector.cpp  ScoringObject.cpp
dbow2/src/dutils/: Random.cpp  Timestamp.cpp
orb_slam/: CMakeLists.txt  package.xml
orb_slam/Data/: Settings.yaml  asus-xtion.yaml  camera-chameleon.txt  camera-flea3.yml  rviz.rviz
orb_slam/include/: Frame.h  FramePublisher.h  Initializer.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapClosing.h  MapDatabase.h  MapPoint.h  MapPublisher.h  ORBVocabulary.h  ORBmatcher.h  Tracking.h
orb_slam/include/publishers/: FramePublisher.h  MapPublisher.h
orb_slam/include/threads/: LocalMapping.h  LoopClosing.h  MapMerging.h  OrbThread.h  Relocalization.h  Tracking.h
orb_slam/include/types/: Frame.h  KeyFrame.h  KeyFrameDatabase.h  Map.h  MapDatabase.h  MapPoint.h
orb_slam/include/util/: FpsCounter.h  Initializer.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h
orb_slam/launch/: orb_slam.launch
orb_slam/src/: Frame.cc  FramePublisher.cc  ImageBuffer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapClosing.cc  MapDatabase.cc  MapMerging.cc  MapPublisher.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc  main.cc
orb_slam/src/publishers/: FramePublisher.cc  MapPublisher.cc
orb_slam/src/threads/: LocalMapping.cc  LoopClosing.cc  MapMerging.cc  OrbThread.cc  Relocalization.cc  Tracking.cc
orb_slam/src/types/: Frame.cc  KeyFrame.cc  KeyFrameDatabase.cc  Map.cc  MapDatabase.cc  MapPoint.cc
orb_slam/src/util/: Converter.cc  FpsCounter.cc  Initializer.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc
