<?xml version="1.0"?>
<package>
  <name>dbow2</name>
  <version>0.0.0</version>
  <description>The DBoW2 package</description>
  <maintainer email="dorian3d@gmail.com">Dorian Galvez-Lopez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>OpenCV</run_depend>
  
</package>
